--- a/app_indecol/fixtures/projects.json
+++ b/app_indecol/fixtures/projects.json
@@ -13,8 +13,9 @@
         "type":"EU fp7",
         "persons":[100, 101, 102],
         "groups":[11],
-        "partners":[4],
-        "ressources":[]
+        "partners":[],
+        "ressources":[],
+        "users":[1]
     }
     },
     {
@@ -32,8 +33,9 @@
             "type":"RCN",
             "persons":[101,103],
             "groups":[12],
-            "partners":[4],
-            "ressources":[11, 12]
+            "partners":[],
+            "ressources":[11, 12],
+            "users":[1]
         
         }
         
