--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/base": "^5.0.0-beta.24",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.18",
+    "@mui/x-date-pickers": "^6.18.1",
     "@reduxjs/toolkit": "^1.9.7",
+    "@table-library/react-table-library": "^4.1.7",
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "dayjs": "^1.11.10",
+    "html2canvas": "^1.4.1",
+    "install": "^0.13.0",
+    "jspdf": "^2.5.1",
+    "npm": "^10.2.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
-    "react-redux-loading-bar": "^5.0.4"
+    "react-redux-loading-bar": "^5.0.4",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
