--- a/backend/app_indecol/fixtures/projects.json
+++ b/backend/app_indecol/fixtures/projects.json
@@ -4,7 +4,7 @@
 
         "fields": {
             "project_id":"DESIRE",
-        "name":"DEvelopment of a System of Indicators for a Resource efficient Europe",
+        "name":"Development of a System of Indicators for a Resource efficient Europe",
         "description":"DESIRE will develop and apply an optimal set of indicators to monitor European progress towards resource-efficiency. We propose a combination of time series of environmentally extended input output data (EE IO) and the DPSIR framework to construct the indicator set. Only this approach will use a single data set that allows for consistent construction of resource efficiency indicators capturing the EU, country, sector and product group level, and the production and consumption perspective including impacts outside the EU. The project will a) improve data availability, particularly by creating EE IO time series and now-casted data (WP5). b) improve calculation methods for indicators that currently still lack scientific robustness, most notably in the field of biodiversity/ecosystem services (WP7) and critical materials (WP6). We further will develop novel reference indicators for economic success (‘Beyound GDP and Value added’, WP8). c) explicitly address the problem of indicator proliferation and limits in available data that have a ‘statistical stamp’. Via scientific analysis we will select the smallest set of indicators giving mutually independent information, and show which shortcuts in (statistical) data inventory can be made without significant loss of quality (WP8) The project comprises further Interactive policy analysis, indicator concept development via ‘brokerage activities (WP2-4), Management (WP1), and Conclusions and implementation (WP10) including a hand over ofdata and indicators to the EU’s Group of Four of EEA, Eurostat, DG ENV and DG JRC. Our team includes 4 UN Resource Panel members (WI, AAU-SEC, NTNU and LU-CML) and founders of the material flow analysis field (e.g. SERI). We further include TNO (global leader in EE IO via projects like EXIOPOL and CREEA), FFCUL (global top in biodiversity and ecosystem services) and RU (top player in sustainability impact assessment). ",
         "start_date":"2012-09-01",
         "end_date":"2016-02-29",
@@ -15,7 +15,7 @@
         "groups":[11],
         "partners":[],
         "ressources":[],
-        "users":[1]
+        "users":[72]
     }
     },
     {
@@ -35,7 +35,7 @@
             "groups":[12],
             "partners":[],
             "ressources":[11, 12],
-            "users":[1]
+            "users":[72]
         
         }
         
