--- a/backend/app_indecol/fixtures/projects.json
+++ b/backend/app_indecol/fixtures/projects.json
@@ -1,28 +1,27 @@
 [
     {
         "model": "app_indecol.project",
-
+        "pk":1,
         "fields": {
             "project_id":"DESIRE",
-        "name":"Development of a System of Indicators for a Resource efficient Europe",
-        "description":"DESIRE will develop and apply an optimal set of indicators to monitor European progress towards resource-efficiency. We propose a combination of time series of environmentally extended input output data (EE IO) and the DPSIR framework to construct the indicator set. Only this approach will use a single data set that allows for consistent construction of resource efficiency indicators capturing the EU, country, sector and product group level, and the production and consumption perspective including impacts outside the EU. The project will a) improve data availability, particularly by creating EE IO time series and now-casted data (WP5). b) improve calculation methods for indicators that currently still lack scientific robustness, most notably in the field of biodiversity/ecosystem services (WP7) and critical materials (WP6). We further will develop novel reference indicators for economic success (‘Beyound GDP and Value added’, WP8). c) explicitly address the problem of indicator proliferation and limits in available data that have a ‘statistical stamp’. Via scientific analysis we will select the smallest set of indicators giving mutually independent information, and show which shortcuts in (statistical) data inventory can be made without significant loss of quality (WP8) The project comprises further Interactive policy analysis, indicator concept development via ‘brokerage activities (WP2-4), Management (WP1), and Conclusions and implementation (WP10) including a hand over ofdata and indicators to the EU’s Group of Four of EEA, Eurostat, DG ENV and DG JRC. Our team includes 4 UN Resource Panel members (WI, AAU-SEC, NTNU and LU-CML) and founders of the material flow analysis field (e.g. SERI). We further include TNO (global leader in EE IO via projects like EXIOPOL and CREEA), FFCUL (global top in biodiversity and ecosystem services) and RU (top player in sustainability impact assessment). ",
-        "start_date":"2012-09-01",
-        "end_date":"2016-02-29",
-        "keywords":[57],
-        "methods":[72],
-        "type":73,
-        "persons":[1, 2, 3],
-        "groups":[1],
-        "partners":[],
-        "resources":[],
-        "users":[1]
-    }
+            "name":"Development of a System of Indicators for a Resource efficient Europe",
+            "description":"DESIRE will develop and apply an optimal set of indicators to monitor European progress towards resource-efficiency. We propose a combination of time series of environmentally extended input output data (EE IO) and the DPSIR framework to construct the indicator set. Only this approach will use a single data set that allows for consistent construction of resource efficiency indicators capturing the EU, country, sector and product group level, and the production and consumption perspective including impacts outside the EU. The project will a) improve data availability, particularly by creating EE IO time series and now-casted data (WP5). b) improve calculation methods for indicators that currently still lack scientific robustness, most notably in the field of biodiversity/ecosystem services (WP7) and critical materials (WP6). We further will develop novel reference indicators for economic success (‘Beyound GDP and Value added’, WP8). c) explicitly address the problem of indicator proliferation and limits in available data that have a ‘statistical stamp’. Via scientific analysis we will select the smallest set of indicators giving mutually independent information, and show which shortcuts in (statistical) data inventory can be made without significant loss of quality (WP8) The project comprises further Interactive policy analysis, indicator concept development via ‘brokerage activities (WP2-4), Management (WP1), and Conclusions and implementation (WP10) including a hand over ofdata and indicators to the EU’s Group of Four of EEA, Eurostat, DG ENV and DG JRC. Our team includes 4 UN Resource Panel members (WI, AAU-SEC, NTNU and LU-CML) and founders of the material flow analysis field (e.g. SERI). We further include TNO (global leader in EE IO via projects like EXIOPOL and CREEA), FFCUL (global top in biodiversity and ecosystem services) and RU (top player in sustainability impact assessment). ",
+            "start_date":"2012-09-01",
+            "end_date":"2016-02-29",
+            "keywords":[57, 58, 59],
+            "methods":[72],
+            "type":73,
+            "persons":[1, 3, 7],
+            "groups":[1],
+            "partners":[],
+            "resources":[],
+            "users":[1]
+        }
     },
     {
         "model": "app_indecol.project",
-        
+        "pk": 2,
         "fields": {
-
             "project_id":"HiTEA",
             "name":"High Throughput Environmental Assessment Pipeline",
             "description":" The High Throughput Environmental Assessment Pipeline (HiTEA) project will build an end-user friendly tool for sophisticated sensitivity and uncertainty analysis towards reaching the Sustainable Development Goals (SDGs). HiTEA will make it simple, fast and cost-effective for researchers to perform thousands of model runs when they would previously only undertake one. The main impact will be to change the standard practice of point estimates in environmental assessments to exploration of solution spaces. By integrating life-cycle assessments and supply-chain analysis into parameterized scenarios, the likelihood of “problems” and “opportunities” can be realized, with direct benefits for better information on long-term sustainability policy design. The HiTEA architecture combines emerging digital container technologies, in memory column storage and interactive notebooks. HiTEA is planned to run on various e-infrastructure systems ranging from local multi-core servers, to HPC infrastructure at NTNU (OpenStack), Sigma2 (Nird Toolbox) and to commercial Kubernetes based cloud services like Amazon AWS and MS Azure. After reaching a mature software product, we aim to include HiTEA into the service catalogue of the EOSCHub. Case studies connected to SDGs will be conducted during the project. These run in parallel to the software development, providing the feedback needed to ensure software which thoroughly meets scientific user requirements. To do so, the project adopts industry standard Agile Software Development practices for the use in scientific software development. HiTEA embraces Open Source development. Besides maximizing outreach and exploitation, this will provide feedback on the usability and required capabilities already during the development phase. In addition, it actively encourages code contributions and usage from outside the project team to deliver a tool fully owned by the sustainability science community. ",
@@ -35,10 +34,48 @@
             "groups":[2],
             "partners":[],
             "resources":[1, 2],
+            "related":[1],
             "users":[1]
-        
         }
-        
+    },
+    {
+        "model": "app_indecol.project",
+        "pk": 3,
+        "fields": {
+            "project_id":"IndEcx",
+            "name":"IndEcx",
+            "description":"Industrial Ecology Project Database : Creation of an internal database of projects and people associated with them.",
+            "start_date":"2023-09-22",
+            "end_date":"2024-01-18",
+            "keywords":[59],
+            "methods":[64],
+            "type":13,
+            "persons":[5, 6],
+            "groups":[2],
+            "partners":[],
+            "resources":[3, 4],
+            "related":[],
+            "users":[1]
+        }
+    },
+    {
+        "model": "app_indecol.project",
+        "pk": 4,
+        "fields": {
+            "project_id":"GLAMURS",
+            "name":"Green Lifestyles, Alternative Models and Upscaling Regional Sustainability",
+            "description":"The overall aim of GLAMURS (Green Lifestyles, Alternative Models and Upscaling Regional Sustainability) is to develop a theoretically-based and empirically-grounded understanding of the main obstacles and prospects for transitions to sustainable lifestyles and a green economy in Europe, as well as of the most effective means to support and speed them up. The call states explicitly that for transitions to be possible there is a need to address the demand side, reevaluate growth models and find appropriate ways to produce lifestyle changes and economic paradigm shifts. The result will be the development, testing and assessing of several integrated pathways for transitions to a low-carbon Europe. GLAMURS will develop theory, models and evidence on obstacles and prospects for the transformation to green economies and lifestyles in Europe. It will do this through multi-scale, multi-region integrated research involving psychologists, economists and policy experts studying individual and societal levels, combined with environmental impact modeling of the effects of scenarios and policy interventions on lifestyle and economic transitions. The research will engage policymakers and stakeholders at the European and regional scales, studying citizens' everyday lives in the present, and emerging initiatives: 'early adopters' of more sustainable lifestyle practices and behaviors. It will provide recommendations on the best governance designs and policy mixes for achieving a sufficiently-fast paced transition in Europe in line with the objectives established in the Europe 2020 strategy and the Resource Efficiency Flagship Initiative. It will also evaluate the context the project creates to understand how citizens, researchers, stakeholder organizations and policymakers come to know what it is they need to do to bring about individually, socially, environmentally and economically sustainable living, disseminating our work through diverse media.",
+            "start_date":"2014-01-01",
+            "end_date":"2016-12-31",
+            "keywords":[34, 35, 37, 44, 47, 48, 50, 51, 52, 53, 54, 55, 56, 57, 58],
+            "methods":[61],
+            "type":12,
+            "persons":[7],
+            "groups":[1, 2],
+            "partners":[1],
+            "resources":[5],
+            "related":[1],
+            "users":[1]
+        }
     }
-
 ]
