--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,16 +11,22 @@ server {
 	server_name indecx.app;
 
 	location /api/ {
-		proxy_pass http://backend/api/;
+		proxy_pass https://backend/api/;
 	}
 	location /admin/ {
-		proxy_pass http://backend/admin/;
+		proxy_pass https://backend/admin/;
 	}
 
 	location /static/ {
 		autoindex on; 
         autoindex_exact_size off;
-		alias /static/;
+		root /static/;
+	}
+
+	location /media/ {
+		autoindex on; 
+        autoindex_exact_size off;
+		root /data;
 	}
 
 	location / {
