fixed backend links in nginx

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,10 +11,10 @@ server {
 	server_name indecx.app;
 
 	location /api/ {
-		proxy_pass https://backend/api/;
+		proxy_pass http://backend/api/;
 	}
 	location /admin/ {
-		proxy_pass https://backend/admin/;
+		proxy_pass http://backend/admin/;
 	}
 
 	location /static/ {
