--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -20,7 +20,7 @@ server {
 	location /static/ {
 		autoindex on; 
         autoindex_exact_size off;
-		root /static;
+		root /;
 	}
 
 	location /media/ {
