--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,6 +9,7 @@ upstream backend {
 server {
 	listen 0.0.0.0:80;
 	server_name indecx.app;
+	client_max_body_size 10G;
 
 	location /api/ {
 		proxy_pass http://backend/api/;
@@ -26,7 +27,13 @@ server {
 	location /media/ {
 		autoindex on; 
         autoindex_exact_size off;
-		root /data;
+		root /data/db_backup_mountp;
+	}
+
+	location /files/ {
+		autoindex on; 
+        autoindex_exact_size off;
+		root /data/db_backup_mountp;
 	}
 
 	location / {
