--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-loading": "^2.0.3",
     "react-redux": "^8.1.3",
     "react-redux-loading-bar": "^5.0.4",
     "redux-logger": "^3.0.6"
