--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,6 +10,10 @@ server {
 	listen 0.0.0.0:80;
 	server_name indecx.app;
 	client_max_body_size 10G;
+	proxy_connect_timeout 7200s;
+	proxy_read_timeout 7200s;
+	proxy_send_timeout 7200s;
+	send_timeout 7200s;
 
 	location /api/ {
 		proxy_pass http://backend/api/;
