--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,11 +9,10 @@ upstream backend {
 server {
 	listen 0.0.0.0:80;
 	server_name indecx.app;
-	client_max_body_size 10G;
-	proxy_connect_timeout 7200s;
-	proxy_read_timeout 7200s;
-	proxy_send_timeout 7200s;
-	send_timeout 7200s;
+	proxy_request_buffering off;
+	proxy_http_version 1.1;
+	client_max_body_size 0;
+	proxy_read_timeout 3600s;
 
 	location /api/ {
 		proxy_pass http://backend/api/;
