fixed files path to data/db

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -30,13 +30,13 @@ server {
 	location /media/ {
 		autoindex on; 
         autoindex_exact_size off;
-		root /data/db_backup_mountp;
+		root /data/db;
 	}
 
 	location /files/ {
 		autoindex on; 
         autoindex_exact_size off;
-		root /data/db_backup_mountp;
+		root /data/db;
 	}
 
 	location / {
