--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,7 +11,7 @@ server {
 	server_name indecx.app;
 	proxy_request_buffering off;
 	proxy_http_version 1.1;
-	client_max_body_size 0;
+	client_max_body_size 1G;
 	proxy_read_timeout 3600s;
 
 	location /api/ {
