--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,5 +1,5 @@
 source 'https://rubygems.org'
 
-gem "jekyll", "~> 4.3" # installed by `gem jekyll`
+gem "jekyll" # installed by `gem jekyll`
 
-gem "just-the-docs", "0.5.0" # pinned to the current release
+gem "just-the-docs" # pinned to the current release
