--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,5 +1,5 @@
 source 'https://rubygems.org'
 
-gem "jekyll" # installed by `gem jekyll`
+gem "jekyll", "~> 4.3.3" # installed by `gem jekyll`
 
 gem "just-the-docs" # pinned to the current release
