--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,7 +4,7 @@ theme: just-the-docs
 logo: "images/logo.png"
 favicon_ico: "images/logo.png"
 
-url: https://github.com/NTNU-IndEcol/IndEcX
+url: https://hazimhussein.github.io/db_project_indecol/
 
 aux_links:
   Repository: https://github.com/NTNU-IndEcol/IndEcX
