--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,6 +8,17 @@ upstream backend {
 
 server {
 	listen 0.0.0.0:80;
+	server_name docs.indecx.app;
+
+	location ~ ^(?<path>/.*/)(?<file>[^/]+)/?$ {
+		root /var/www/docs;
+		try_files $uri $path$file.html index.html $uri/;
+	}
+	
+}
+
+server {
+	listen 0.0.0.0:80;
 	server_name indecx.app;
 	proxy_request_buffering off;
 	proxy_http_version 1.1;
@@ -43,4 +54,6 @@ server {
 		root /var/www/frontend;
 		try_files $uri $uri/ /index.html;
 	}
+	
 }
+
